css/recipe.css
.total-container
{
    display: flex;
    flex-direction: row;
}

#title
{
    font-family: Calibri;
    font-size: 24px;
    text-align: center;
    text-decoration: underline;
    text-decoration-color: blue;
    text-decoration-thickness: 2px;
}

.container
{
    padding-top: 2%;
}

.content
{
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

.text-container
{
    display: flex;
    flex-direction: column;
    width: 50%;
    align-self: auto;
    border: 0px;
}

.ingredients
{
    padding: 10px;
    margin: auto;
    text-align: left;
    font-size: 16px;
    font-family: Calibri;
}

.img
{
    width: 50%;
    height: auto;
}

.steps
{
    padding: 10px;
    margin: auto;
    text-align: left;
    font-size: 16px;
    font-family: Calibri;
}

body{
    margin: 0px;
    padding: 0px;
}

.recipe-image
{
    border-radius: 5px;
    
}

.recipe {
    color: black !important;
}

